# aigen-music

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  api.py  data_loader.py  demo.ipynb  demo_script.ipynb  demo_script.py  experiment.py  finetune.py  generate_indian_music.py  generate_sample.py  pyproject.toml  railway.toml  requirements.txt  run.sh  setup.sh  start.py  start.sh
