[tool.poetry]
name = "srocksmusic-aigen"
version = "0.1.0"
description = "AI music generation prototype – S.Rocks.Music"
authors = ["Sarvagya Verma <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "2.1.0"
torchaudio = "2.1.0"
torchvision = "0.16.0"
transformers = "4.37.2"
scipy = ">=1.11.2"
numpy = ">=1.24.0"
fastapi = ">=0.95.2"
uvicorn = ">=0.22.0"
einops = ">=0.6.1"
hydra-core = ">=1.3.2"
hydra_colorlog = ">=1.2.0"
julius = ">=0.2.7"
num2words = ">=0.5.12"
sentencepiece = ">=0.2.0"
spacy = ">=3.5.2"
huggingface_hub = ">=0.32.2"
tqdm = ">=4.65.0"
librosa = ">=0.10.0"
ipywidgets = ">=8.1.1"
jupyter = ">=1.0.0"
matplotlib = ">=3.8.2"
jupytext = ">=1.16.1"
demucs = ">=4.0.0"
encodec = ">=0.1.1"
protobuf = ">=4.21.6"
audiocraft = {git = "https://github.com/facebookresearch/audiocraft.git"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 